--- a/notebooks/Optimal_Portfolio_Analysis.ipynb
+++ b/notebooks/Optimal_Portfolio_Analysis.ipynb
@@ -1729,100 +1729,7 @@
    "id": "f42b918e",
    "metadata": {},
    "source": [
-    "Using the efficient frontier with raw sample mean and covariance without regularization, we can build a nice little dashboard that allows to select points along the efficient frontier and calculates the optimal weights for that point.  As expected, mostly only the weighting between the short-term Treasury ETf and Growth ETF change; the more risk I am willing to accept, the more weight goes into the Growth ETF and vice versa."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "2461c743",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7025cb51b934487fb1631c7dbb52acff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverinfo': 'skip',\n",
-       "              'line': {'color': 'lightgray'},…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sigmas   = np.array(ef_raw[\"sigma\"])\n",
-    "mus      = np.array(ef_raw[\"mu\"])\n",
-    "weights  = np.array(ef_raw[\"weights\"])          # (n_points, n_assets)\n",
-    "symbols  = etf_symbols                          # ticker list\n",
-    "name_map = etf_name_map                         # dict ticker → long name\n",
-    "\n",
-    "fig = go.FigureWidget()\n",
-    "fig.layout.hovermode = \"closest\"\n",
-    "fig.layout.clickmode = \"event+select\"\n",
-    "\n",
-    "fig.add_scatter(x=sigmas, y=mus, mode=\"lines\",\n",
-    "                line=dict(color=\"lightgray\"), hoverinfo=\"skip\", showlegend=False)\n",
-    "\n",
-    "fig.add_scatter(\n",
-    "    x=sigmas,\n",
-    "    y=mus,\n",
-    "    mode=\"markers\",\n",
-    "    marker=dict(size=10, color=\"black\"),\n",
-    "    name=\"Raw Frontier\",\n",
-    "    hovertemplate=\"σ: %{x:.2%}<br>μ: %{y:.2%}<br>(click to see top weights)<extra></extra>\",\n",
-    ")\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    title=\"Efficient Frontier (Raw Estimates)\",\n",
-    "    xaxis_title=\"Volatility (σ)\",\n",
-    "    yaxis_title=\"Expected Return (μ)\",\n",
-    "    height=480,\n",
-    ")\n",
-    "\n",
-    "out = HTML()\n",
-    "\n",
-    "def format_html(idx: int) -> str:\n",
-    "    \"\"\"Return HTML string listing the three largest weights.\"\"\"\n",
-    "    w = weights[idx]\n",
-    "    top_idx = np.argsort(w)[-3:][::-1]\n",
-    "    \n",
-    "    rows = []\n",
-    "    for i in top_idx:\n",
-    "        if w[i] > 0.001:  # ≥ 0.1 %\n",
-    "            sym  = symbols[i]\n",
-    "            name = name_map.get(sym, \"Unknown\")\n",
-    "            rows.append(\n",
-    "                f\"<li><b>{sym}</b> <span style='color:#666'>({name})</span>\"\n",
-    "                f\"<span style='float:right'>{w[i]:.2%}</span></li>\"\n",
-    "            )\n",
-    "    \n",
-    "    html = (\n",
-    "        f\"<div style='font-family:Arial, sans-serif; font-size:14px;\"\n",
-    "        f\"line-height:1.4; max-width:420px;'>\"\n",
-    "        f\"<h4 style='margin:4px 0 8px 0; font-size:15px;'>\"\n",
-    "        f\"Top 3 ETFs – Frontier Point {idx+1}</h4>\"\n",
-    "        f\"<ul style='list-style:none; padding-left:0; margin:0;'>\"\n",
-    "        + \"\\n\".join(rows) +\n",
-    "        \"</ul></div>\"\n",
-    "    )\n",
-    "    return html\n",
-    "\n",
-    "def show_top_three(idx: int):\n",
-    "    out.value = format_html(idx)\n",
-    "\n",
-    "def handle_click(trace, points, selector):\n",
-    "    if points.point_inds:\n",
-    "        show_top_three(points.point_inds[0])\n",
-    "\n",
-    "fig.data[1].on_click(handle_click)\n",
-    "\n",
-    "display(VBox([fig, out]))\n"
+    "Using the efficient frontier with raw sample mean and covariance without regularization, we can build a nice little interactive dashboard that allows to select points along the efficient frontier and calculates the optimal weights for that point (see [README](../README.md)).  As expected, mostly only the weighting between the short-term Treasury ETf and Growth ETF change; the more risk I am willing to accept, the more weight goes into the Growth ETF and vice versa."
    ]
   },
   {
@@ -5835,177 +5742,7 @@
    "source": [
     "Under the more realistic assumption that we re-estimate the model regularly as new data become available, both the Markov regime-switching model and the mean-variance optimization method perform better.  This highlights the importance of using recent time series data when estimating models—especially given the substantial changes in the interest rate environment, which older model fits may not capture.  We also see how risky it is to extrapolate too far using an outdated model: although the Markov model initially outperforms VOO in the first few months after fitting, this advantage disappears after about half a year.\n",
     "\n",
-    "Overall, simple mean-variance optimization delivers the best results—particularly when we incorporate more recent data and re-fit the model approximately every six months."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f4c109e",
-   "metadata": {},
-   "source": [
-    "### 9. Tool to select optimal portfolio"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96ea4f27",
-   "metadata": {},
-   "source": [
-    "We now know that the best performance is delivered by the optimal portfolio defined by the simple static mean-variance optimization, using the most recent set of data.  We can set up a simple tool that lets users select their preferences based on expected return or volatility, and then provides the corresponding optimal portfolio on the mean-variance efficient frontier."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "58461cc0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12cc0b1af4ba421cb7433fe30ed100c6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverinfo': 'skip',\n",
-       "              'line': {'color': 'lightgray'},…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# --- Frontier arrays – ensure they exist ---\n",
-    "\n",
-    "sigmas = np.asarray(ef_raw[\"sigma\"])\n",
-    "mus = np.asarray(ef_raw[\"mu\"])\n",
-    "weights = np.asarray(ef_raw[\"weights\"])\n",
-    "\n",
-    "symbols = globals().get(\"symbols\", etf_symbols)\n",
-    "name_map = globals().get(\"name_map\", etf_name_map)\n",
-    "\n",
-    "# --- Build the figure ---\n",
-    "\n",
-    "fig = go.FigureWidget()\n",
-    "fig.layout.hovermode = \"closest\"\n",
-    "fig.layout.clickmode = \"event+select\"\n",
-    "fig.layout.plot_bgcolor = \"white\"\n",
-    "fig.layout.paper_bgcolor = \"white\"\n",
-    "\n",
-    "fig.add_scatter(x=sigmas, y=mus, mode=\"lines\", line=dict(color=\"lightgray\"),\n",
-    "                hoverinfo=\"skip\", showlegend=False)\n",
-    "\n",
-    "frontier_pts = go.Scatter(\n",
-    "    x=sigmas, y=mus, mode=\"markers\",\n",
-    "    marker=dict(size=7, color=\"gray\", opacity=0.5),\n",
-    "    name=\"Raw Frontier\",\n",
-    "    hoverlabel=dict(bgcolor=\"white\"),\n",
-    "    hovertemplate=\"σ: %{x:.2%}<br>µ: %{y:.2%}<br>(click to see top weights)<extra></extra>\"\n",
-    ")\n",
-    "fig.add_trace(frontier_pts)\n",
-    "\n",
-    "fig.add_scatter(x=[voo_sigma_annual], y=[voo_mu_annual], mode=\"markers\",\n",
-    "                marker=dict(symbol=\"diamond\", size=14, color=\"royalblue\", line=dict(width=2, color=\"black\")),\n",
-    "                name=\"VOO (ref)\",\n",
-    "                hoverlabel=dict(bgcolor=\"white\"),\n",
-    "                hovertemplate=\"VOO\\nσ: %{x:.2%}<br>µ: %{y:.2%}<extra></extra>\")\n",
-    "\n",
-    "mid = len(sigmas) // 2\n",
-    "fig.add_scatter(x=[sigmas[mid]], y=[mus[mid]], mode=\"markers\",\n",
-    "                marker=dict(size=14, color=\"red\", line=dict(width=2, color=\"black\")),\n",
-    "                name=\"Selected\",\n",
-    "                hoverinfo=\"skip\")\n",
-    "sel_idx = len(fig.data) - 1\n",
-    "\n",
-    "fig.update_layout(title=\"Efficient Frontier (Raw Estimates)\",\n",
-    "                  xaxis_title=\"Volatility (σ)\", yaxis_title=\"Expected Return (µ)\",\n",
-    "                  height=480)\n",
-    "\n",
-    "# --- Top 3 Portfolio Components ---\n",
-    "\n",
-    "def format_html(idx: int) -> str:\n",
-    "    w = weights[idx]\n",
-    "    top_idx = np.argsort(w)[-3:][::-1]\n",
-    "    rows = [\n",
-    "        f\"<li><b>{symbols[i]}</b> <span style='color:#666'>({name_map.get(symbols[i],'Unknown')})</span>\"\n",
-    "        f\"<span style='float:right'>{w[i]:.2%}</span></li>\"\n",
-    "        for i in top_idx if w[i] > 0.001\n",
-    "    ]\n",
-    "    return (\n",
-    "        \"<div style='font-family:Arial, sans-serif; font-size:14px; line-height:1.4; max-width:420px;'>\"\n",
-    "        f\"<h4 style='margin:4px 0 8px 0; font-size:15px;'>Top 3 ETFs – Frontier Point {idx+1}</h4>\"\n",
-    "        \"<ul style='list-style:none; padding-left:0; margin:0;'>\" + \"\\n\".join(rows) + \"</ul></div>\"\n",
-    "    )\n",
-    "\n",
-    "out = HTML()\n",
-    "\n",
-    "# --- Sliders ---\n",
-    "\n",
-    "mu_slider = FloatSlider(value=mus[mid], min=mus.min(), max=mus.max(), step=0.0005,\n",
-    "                        description=\"Target µ\", readout_format=\".2%\", continuous_update=False,\n",
-    "                        layout=dict(width=\"450px\"))\n",
-    "\n",
-    "sigma_slider = FloatSlider(value=sigmas[mid], min=sigmas.min(), max=sigmas.max(), step=0.0005,\n",
-    "                           description=\"Target σ\", readout_format=\".2%\", continuous_update=False,\n",
-    "                           layout=dict(width=\"450px\"))\n",
-    "\n",
-    "# --- Sync logic ---\n",
-    "\n",
-    "def move_to_index(idx: int):\n",
-    "    with fig.batch_update():\n",
-    "        fig.data[sel_idx].x = [sigmas[idx]]\n",
-    "        fig.data[sel_idx].y = [mus[idx]]\n",
-    "    mu_slider.value = mus[idx]\n",
-    "    sigma_slider.value = sigmas[idx]\n",
-    "    out.value = format_html(idx)\n",
-    "\n",
-    "move_to_index(mid)\n",
-    "\n",
-    "def on_mu_change(change):\n",
-    "    if change[\"name\"] == \"value\":\n",
-    "        idx = int(np.argmin(np.abs(mus - change[\"new\"])))\n",
-    "        move_to_index(idx)\n",
-    "\n",
-    "def on_sigma_change(change):\n",
-    "    if change[\"name\"] == \"value\":\n",
-    "        idx = int(np.argmin(np.abs(sigmas - change[\"new\"])))\n",
-    "        move_to_index(idx)\n",
-    "\n",
-    "mu_slider.observe(on_mu_change, names=\"value\")\n",
-    "sigma_slider.observe(on_sigma_change, names=\"value\")\n",
-    "\n",
-    "fig.data[1].on_click(lambda trace, points, selector: move_to_index(points.point_inds[0]) if points.point_inds else None)\n",
-    "\n",
-    "# --- Snap-to button for VOO mu and sigma ---\n",
-    "\n",
-    "snap_button = Button(description=\"Snap to VOO\", button_style=\"info\")\n",
-    "snap_criterion = Dropdown(\n",
-    "    options=[(\"Match µ (return)\", \"mu\"), (\"Match σ (volatility)\", \"sigma\")],\n",
-    "    value=\"mu\",\n",
-    "    layout=dict(width=\"180px\")\n",
-    ")\n",
-    "\n",
-    "def on_snap(_):\n",
-    "    if snap_criterion.value == \"mu\":\n",
-    "        idx = int(np.argmin(np.abs(mus - voo_mu_annual)))\n",
-    "    else:\n",
-    "        idx = int(np.argmin(np.abs(sigmas - voo_sigma_annual)))\n",
-    "    move_to_index(idx)\n",
-    "\n",
-    "snap_button.on_click(on_snap)\n",
-    "\n",
-    "# --- Display ------------------------------------------------------\n",
-    "\n",
-    "display(VBox([\n",
-    "    fig,\n",
-    "    mu_slider,\n",
-    "    sigma_slider,\n",
-    "    HBox([snap_button, snap_criterion]),\n",
-    "    out\n",
-    "]))"
+    "Overall, simple mean-variance optimization delivers the best results—particularly when we incorporate more recent data and re-fit the model approximately every year."
    ]
   }
  ],
